--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,12 +3,19 @@
 :root {
   --primary-font: "Inter", sans-serif;
   --secondary-font: "Macondo", cursive;
-  --primary-color: #333;
+  --primary-color: #3a2620; /* dark brown */
+  --secondary-color: #aa9581; /* light brown */
+  --highlight-color: #416a8e; /* blue */
+  --light-highlight-color: #7a9fc2; /* light blue */
 }
+/* Global Styles */
 body {
   font-family: var(--primary-font);
 }
 h1 {
   font-family: var(--secondary-font);
   color: var(--primary-color);
+}
+.sub-heading-color {
+  color: var(--highlight-color);
 }
