--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,3 @@
-/* @import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Oswald:wght@200..700&display=swap"); */
 @import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Macondo&family=Oswald:wght@200..700&display=swap");
 :root {
   --primary-font: "Inter", sans-serif;
@@ -16,6 +15,11 @@ h1 {
   font-family: var(--secondary-font);
   color: var(--primary-color);
 }
-.sub-heading-color {
-  color: var(--highlight-color);
+.container,
+.row {
+  border: 1px solid black;
+}
+.col-12 {
+  border: 1px solid white;
+  background-color: lightgray;
 }
