--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,18 @@ body {
 h1 {
   font-family: var(--secondary-font);
   color: var(--primary-color);
+  text-transform: uppercase;
+}
+.sub-heading-color {
+  color: var(--highlight-color);
+}
+.section {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+/* Header Style */
+#header .lead {
+  font-family: var(--secondary-font);
 }
 
 /* Navbar Style */
