--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,13 +53,31 @@ h2 {
 #navbar .logo {
   width: 35px;
 }
-/* .row {
-  border: 1px solid black;
+/* Footer / Contact */
+#contact {
+  background-color: var(--primary-color);
+  color: white;
+  padding-bottom: 3rem;
 }
-.col-12 {
-  border: 1px solid white;
-  background-color: lightgray;
-} */
+#contact h2 {
+  color: white;
+}
+#contact .sub-heading-color {
+  color: var(--light-highlight-color);
+}
+#contact i {
+  color: var(--secondary-color);
+  font-size: 1.2rem;
+  padding-right: 15px;
+}
+#contact .social-links i {
+  color: var(--light-highlight-color);
+  font-size: 1.9rem;
+  transition: color 0.3s ease-in-out;
+}
+#contact a {
+  color: var(--primary-color);
+}
 
 @media (min-width: 768px) {
   #services .card-body {
