--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,8 +75,14 @@ h2 {
   font-size: 1.9rem;
   transition: color 0.3s ease-in-out;
 }
+#contact .social-links i:hover {
+  color: var(--secondary-color);
+}
 #contact a {
   color: var(--primary-color);
+}
+#contact .table-dark * {
+  background-color: transparent;
 }
 
 @media (min-width: 768px) {
