--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,6 +53,29 @@ h2 {
 #navbar .logo {
   width: 35px;
 }
+/* Button */
+.custom-btn-filled {
+  background-color: var(--highlight-color);
+  color: white;
+  border: 1px solid var(--highlight-color);
+}
+.custom-btn-filled:hover {
+  background-color: var(--secondary-color);
+  color: white;
+  border: 1px solid var(--secondary-color);
+}
+.custom-btn-outline {
+  background-color: transparent;
+  color: var(--highlight-color);
+  border: 2px solid var(--highlight-color);
+  padding: 7px 25px;
+}
+.custom-btn-outline:hover {
+  background-color: var(--highlight-color);
+  color: white;
+  border: 2px solid var(--highlight-color);
+  padding: 7px 25px;
+}
 /* Footer / Contact */
 #contact {
   background-color: var(--primary-color);
