add reservation form and test it

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -87,6 +87,11 @@ h2 {
 .student {
   padding: 5px 5px;
 }
+
+/* Game Reservation */
+.reserve-game {
+  /* width: 900px; */
+}
 /* Footer / Contact */
 #contact {
   background-color: var(--primary-color);
