test home page and munually fixed the navbar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,8 +22,7 @@ h3 {
   color: var(--highlight-color);
 }
 .section {
-  margin-top: 2rem;
-  margin-bottom: 2rem;
+  padding-top: 4rem;
 }
 /* Header Style */
 #header .lead {
